index pgae - new image added as first slider

--- a/index.html
+++ b/index.html
@@ -89,30 +89,10 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
           </ol>
           <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="detail-box">
-                    <div class="hero-kicker">Matern Roots Preschool</div>
-                    <h1>
-                      A Safe & Loving Place <br />
-                      <span>
-                        For Happy Little Learners
-                      </span>
-                    </h1>
-
-                    <p>
-                      Matern Roots Preschool provides a caring, joyful, and secure environment
-                      where young children feel comfortable, confident, and eager to learn
-                      each day.
-                    </p>
-
-                    <div class="btn-box">
-                      <a href="about.html" class="btn-1">Know More</a>
-                      <a href="contact.html" class="btn-2">Contact Us</a>
-                    </div>
-                  </div>
-                </div>
+            <div class="carousel-item active image-only-slide">
+              <div class="image-only-wrap">
+                <div class="image-only-badge">Matern Roots Preschool</div>
+                <img src="images/School_images/Page1.png" alt="Matern Roots Preschool campus view" />
               </div>
             </div>
 
@@ -786,6 +766,23 @@
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear()
+
+    ;(function () {
+      var $carousel = $('#carouselExampleIndicators')
+      var $slider = $('.slider_section')
+      if (!$carousel.length || !$slider.length) return
+
+      function syncFirstImageSlide() {
+        var activeIndex = $carousel.find('.carousel-item.active').index()
+        $slider.toggleClass('first-image-slide-active', activeIndex === 0)
+      }
+
+      $carousel.on('slide.bs.carousel', function (e) {
+        $slider.toggleClass('first-image-slide-active', e.to === 0)
+      })
+      $carousel.on('slid.bs.carousel', syncFirstImageSlide)
+      syncFirstImageSlide()
+    })()
   </script>
   <a href="https://wa.me/919309459772" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
     <img src="images/wp.svg" alt="WhatsApp widget">
@@ -793,3 +790,4 @@
 </body>
 
 </html>
+
